Implement tickets 8.4 and 8.5 (Hard Delete, Billing Filter, Dashboard UI) and fix backend warnings/bugs